--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <link
+      class=""
+      rel="icon"
+      href="https://image.flaticon.com/icons/png/512/4773/4773761.png"
+    />
     <title>Fauzul Password Manager</title>
   </head>
 
